fix datebox, combobox z-index to comply in opera browser

--- a/src/main/webapp/sys/css/zk-style.css
+++ b/src/main/webapp/sys/css/zk-style.css
@@ -72,6 +72,8 @@
 .z-datebox-rounded-inp, .z-combobox-rounded-inp { 
 	background-image: none !important; 
 	font-size: 11px !important; 
+    border-radius: 4px 0 0 4px; 
+    width: 200px !important;
 }
 .z-datebox-rounded {
     display: inline-block;
@@ -80,12 +82,12 @@
     vertical-align: middle;
     white-space: nowrap;
 }
-/*
+
 .z-datebox-rounded input[type="text"],
 .z-combobox-rounded input[type="text"] {
-    border-radius: 4px 0 0 4px;	
+
 }
-*/
+
 .z-datebox-rounded .z-datebox-rounded-btn {background-repeat: no-repeat; background-image: url("../../../zk-template/assets/icons/calendar.png");}
 .z-combobox-rounded .z-combobox-rounded-btn {background-repeat: no-repeat;background-image: url("../../../zk-template/assets/icons/arrow-down.png");}
 
@@ -123,6 +125,7 @@
     border-radius: 0 4px 4px 0;
     cursor: pointer;
     overflow: hidden;
+    z-index: 11;
 }
 
 .z-combobox-rounded .z-combobox-rounded-btn-over, .z-bandbox-rounded .z-bandbox-rounded-btn-over, .z-datebox-rounded .z-datebox-rounded-btn-over, .z-timebox-rounded .z-timebox-rounded-btn-over, .z-spinner-rounded .z-spinner-rounded-btn-over, .z-doublespinner-rounded .z-doublespinner-rounded-btn-over
